# mcg

./: .gitignore  AGENTS.md  CLAUDE.md  CRUSH.md  Cargo.toml  IROH.md  LICENSE_MIT  OpenCode.md  README.md  ROADMAP.md  crush.json  index.html  issues.md  justfile  mcg.code-workspace  next-steps.md  refactor.md  serve.sh  sign_rust_binaries.ps1  start.sh  structure.md  test_hand_eval.rs  wasm-build.sh  websocket-rewrite.md
.cargo/: config.toml
.claude/agents/: code-architectural-analyzer.md  rust-library-researcher.md
.roo/mcp_servers/rustdocs/: package-lock.json  package.json
ast/src/: analyzer.rs  ast.rs  dsl_types.rs  keywords.rs  lib.rs  parse.rs  test_helper.rs
ast/src/analyzer/: analyzer.rs  analyzer_error.rs  ctx.rs  mod.rs  type_analyzer.rs
ast/src/asts/: ast.rs  mod.rs  typed_ast.rs
ast/src/helper/: test_helper.rs
ast/src/parse/: ast_to_typed_ast.rs  mod.rs  parse.rs  visit_typed_vars.rs
ast/tests/: analyzer_tests.rs  parse_tests.rs
cardgamedsl/: .gitignore  Cargo.toml  Makefile
cardgamedsl/cgdsl/: CHANGELOG.md  LICENSE  README.md  package-lock.json
cardgamedsl/cgdsl/src/: generate-grammar.ts
cardgamedsl/cgdsl/syntaxes/: cgdsl.tmLanguage.json
cardgamedsl/cgdsl/themes/: cgdsl-dark.json
cardgamedsl/code_gen/: Cargo.toml
cardgamedsl/code_gen/src/: lib.rs
cardgamedsl/docs/: development.md
cardgamedsl/docs/adr/: 0002-walker-visitor.md  0003-code-gen.md
cardgamedsl/front_end/: Cargo.toml
cardgamedsl/front_end/src/: arbitrary.rs  fmt_ast.rs  fsm_to_dot.rs  grammar.pest  ir.rs  lib.rs  lower.rs  main.rs  parser.rs  spans.rs  symbols.rs  tests.rs  validation.rs  walker.rs
cardgamedsl/lsp_server/src/: completion.rs  error_to_diagnostics.rs  main.rs  semantic_highlighting.rs  validation.rs
cgdsl/: .gitignore  README.md  package-lock.json  package.json
cgdsl/src/: extension.ts  generate-grammar.ts  keywords.ts
cgdsl/syntaxes/: cgdsl.tmLanguage.json
cgdsl/themes/: cgdsl-dark.json
client/: Cargo.toml
client/src/: articles.rs  game.rs  hardcoded_cards.rs  lib.rs  qr_scanner.rs  router.rs  utils.rs
client/src/game/: card.rs  connection.rs  field.rs  screen.rs
client/src/game/screens/: articles_screen.rs  cards_test_dnd.rs  dnd_test.rs  example_screen.rs  game.rs  game_setup_screen.rs  main_menu.rs  mod.rs  pairing_screen.rs  poker_online.rs  qr_test.rs
code_gen/: Cargo.toml
code_gen/src/: lib.rs
crates/cgdsl/: .gitignore  LICENSE-MIT  tsconfig.json
crates/engine/: Cargo.toml
crates/front_end/: .gitignore
crates/lsp_server/: Cargo.toml
crates/qr_comm/: Cargo.toml
docs/: ARCHITECTURE.md  BACKEND.md  CGDSL.md  DATA_STRUCTURES.md  FRONTEND.md  FUTURE_WORK_AND_MERGE.md  QR_PROTOCOL.md  WINDOWS_SPECIFICS.md  development.md
docs/architecture/: architecture.tex
docs/cardgamedsl/: Makefile
front_end/: .gitignore  Cargo.toml  build.rs  macro_output.txt
front_end/proptest-regressions/: tests.txt
front_end/src/: analysis.rs  analyzer.rs  analyzer_error.rs  arbitrary.rs  ast.rs  ast_to_typed_ast.rs  diagnostic.rs  diagnostics.rs  fmt_ast.rs  fsm.rs  fsm_to_dot.rs  game_type.rs  grammar.pest  ir.rs  keywords.rs  lib.rs  lower.rs  parse.rs  parser.rs  semantic.rs  spanned_ast.rs  spans.rs  symbols.rs  test_helper.rs  tests.rs  transform_to_typed.rs  typed_ast.rs  validation.rs  visit_typed_vars.rs  visitor.rs  walker.rs
front_end/src/helper/: fsm_to_dot.rs  mod.rs  test_helper.rs
front_end/src/old_tests/: parse_tests.rs
front_end/src/tests/: analyzer_tests.rs  fsm_builder_test.rs  mod.rs  pest_parser_tests.rs
front_end/tests/: analyzer_tests.rs  fsm_builder_test.rs  parse_tests.rs  test_fsm_builder.rs
front_end/tests_out/: choose.dot  conditional.dot  game.dot  if.dot  optional.dot  optional_rule.dot  stage.dot
frontend/: Cargo.toml
frontend/src/: articles.rs  effects.rs  game.rs  hardcoded_cards.rs  lib.rs  qr_scanner.rs  router.rs  store.rs  utils.rs
ir/src/: fsm.rs
ir/tests/: test_fsm_builder.rs
ir/tests_out/: choice_rule.dot  game.dot  if_rule.dot  optional_rule.dot  rule.dot  stage.dot
jules-scratch/verification/: verify_bets.py  verify_realtime_updates.py
lsp_server/: Cargo.toml
lsp_server/src/: completion.rs  error_diagnostics.rs  error_to_diagnostics.rs  lsp.rs  main.rs  rope.rs  rule_completion.rs  semantic_highlighting.rs  tests.rs  validation.rs
media/qr_test/: data_1.txt  homepage.md
native_mcg/: Cargo.toml
native_mcg/src/: bot.rs  config.rs  eval.rs  game.rs  iroh_transport.rs  lib.rs  main.rs  pretty.rs  public.rs  transport.rs
native_mcg/src/backend/: http.rs  iroh.rs  mod.rs  run.rs  state.rs  ws.rs
native_mcg/src/cli/: mod.rs
native_mcg/src/game/: betting.rs  dealing.rs  engine.rs  flow.rs  showdown.rs  utils.rs
native_mcg/src/poker/: cards.rs  constants.rs  evaluation.rs  hand_ranking.rs  mod.rs
native_mcg/src/server/: bot_driver.rs  game_ops.rs  http.rs  iroh.rs  lobby.rs  mod.rs  run.rs  session.rs  state.rs  ws.rs
native_mcg/tests/: evaluation_tests.rs  game_log_scenarios.rs  integration_ws.rs  poker_bug_fixes.rs
plans/: bankrupt.md  botdriver.md  decouple.md  dedup.md  generalcoms.md  issues.md  moresharing.md  nomorewelcome.md  ping.md  videodownload.md
proc_generation/src/: lib.rs
research/: iroh-blobs.md  iroh-core.md  iroh-discovery.md  iroh-gossip.md  iroh.md
server/: Cargo.toml
server/src/: config.rs  connection.rs  eval.rs  game.rs  iroh_transport.rs  lib.rs  main.rs  net.rs  pretty.rs  server.rs  server_admin.rs  server_old.rs  transport.rs
server/src/game/: betting.rs  dealing.rs  engine.rs  player.rs  showdown.rs  state.rs  utils.rs
server/src/net/: bot_debug.rs  poker_tests.rs
server/src/server/: http.rs  mod.rs  run.rs  server_admin.rs  state.rs  ws.rs
server/src/transport/: framing.rs  iroh_transport.rs  mod.rs  msg_protocol.rs  websocket_transport.rs
shared/: Cargo.toml
shared/src/: cards.rs  communication.rs  game.rs  hand.rs  lib.rs  messages.rs  player.rs
src/: articles.rs  example.rs  game.rs  hardcoded_cards.rs  lib.rs  utils.rs
src/communication/: mod.rs
src/game/: card.rs  field.rs  screen.rs
(+83 files in other folders)
