[package]
name = "mcg"
version = "0.1.0"
authors = ["Jan Cichosz <jan.cichosz@web.de>"]
edition = "2018"
description = "A mental card game implementation for the browser"
repository = "https://github.com/mentalcardgames/mcg"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "image", "svg", "file"] }
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.1"
sha2 = "0.10.8"
hex = "0.4.3"
num-bigint = "0.4.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1

# This tells `rustc` to optimize for small code size, but also
# optimize and enable better dead code elimination.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
