[package]
name = "mcg"
version = "0.1.0"
authors = ["Jan Cichosz <jan.cichosz@web.de>"]
edition = "2018"
description = "A mental card game implementation for the browser"
repository = "https://github.com/mentalcardgames/mcg"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = [
        "HtmlCanvasElement",
        "HtmlVideoElement",
        "MediaStream",
        "MediaStreamTrack",
        "MediaDevices",
        "MediaStreamConstraints",
        "CanvasRenderingContext2d",
        "ImageData",
        "Event",
        "EventTarget",
        "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    ]}
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "image", "svg", "file"] }
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.1"
sha2 = "0.10.8"
hex = "0.4.3"
num-bigint = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
rqrr = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# Server-only dependencies (used by the bin target below), gated to native builds
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1

# This tells `rustc` to optimize for small code size, but also
# optimize and enable better dead code elimination.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[[bin]]
name = "mcg-server"
path = "src/bin/server.rs"
