[package]
name = "mcg"
version = "0.1.0"
edition = "2021"
description = "A mental card game implementation for the browser"
license = "MIT OR Apache-2.0"

[features]
wasm = []

[lib]
crate-type = ["cdylib"]
required-features = ["wasm"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.77", features = [
  "HtmlCanvasElement",
  "HtmlVideoElement",
  "MediaStream",
  "MediaStreamTrack",
  "MediaDevices",
  "MediaStreamConstraints",
  "CanvasRenderingContext2d",
  "ImageData",
  "Event",
  "EventTarget",
  "console",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "Window",
  "Screen",
] }
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "image", "svg", "file"] }
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.1"
sha2 = "0.10.8"
hex = "0.4.3"
num-bigint = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
rqrr = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
mcg-shared = { path = "../shared" }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
