[package]
name = "front_end"
version = "0.1.0"
edition = "2024"
# Points cargo to your build script
build = "build.rs"
license.workspace = true  # This pulls the license from the root

[dependencies]
code_gen = { path = "../code_gen" }
pest = "2.8"
pest_derive = "2.8"
pest_consume = "1.1.3"
quote = "1.0"
regex = "1.12.2"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
ron = "0.12.0"
serde_json = "1.0"
proptest = "1.10.0"
proptest-arbitrary-interop = "0.1"
arbitrary = { version = "1.3", features = ["derive"] }
layout-rs = "0.1.1"

[build-dependencies]
# Dependencies EXCLUSIVELY for build.rs
pest_meta = "2.7"
