[package]
name = "lsp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
front_end = { path = "../front_end" }
pest_consume = "1.1.3"
tower-lsp = "0.20"
lsp-types = "0.97.0"
tokio = { version = "1", features = ["full"] }
pest = "2.7"
pest_derive = "2.7"
fuzzy-matcher = "0.3"
arc-swap = "1.7"
ropey = "1"