[package]
name = "native_mcg"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
mcg-shared = { path = "../shared" }
tower-http = { version = "0.6", features = ["fs"] }
clap = { version = "4.5.45", features = ["derive"] }
tokio-tungstenite = { version = "0.24.0", default-features = false }
futures-util = "0.3.31"
url = "2.5.4"
anyhow = "1.0.99"
owo-colors = "4.2.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
toml = "0.7"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Iroh transport support (enabled by default).
# Upgraded to 0.95 to match sendme example - includes online() and improved relay support.
iroh = "0.95"
getrandom = "0.2"
iroh-tickets = "0.2.0"
local_ipaddress = "0.1.0"

# Required helper for async trait usage in iroh handler
async-trait = "0.1"

[dev-dependencies]
tokio-tungstenite = { version = "0.24.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["server"] }
