[package]
name = "mcg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
mcg-shared = { path = "../shared" }
tower-http = { version = "0.6", features = ["fs"] }
