[package]
name = "mcg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
mcg-shared = { path = "../shared" }
tower-http = { version = "0.6", features = ["fs"] }
clap = { version = "4.5.45", features = ["derive"] }
tokio-tungstenite = { version = "0.24.0", default-features = false }
futures-util = "0.3.31"
url = "2.5.4"
anyhow = "1.0.99"
owo-colors = "4.2.2"
async-trait = "0.1.89"
bytes = "1.10.1"
iroh = "0.91.1"
iroh-blobs = "0.93.0"
blake3 = "1.8.2"
hex = "0.4.3"
reqwest = "0.12.23"
iroh-base = "0.91.1"
